crates/macros/context-derive/tests/ui/not_a_struct.stderr
error: Context Extensions traits can only be derived for structs
 --> tests/ui/not_a_struct.rs:4:6
  |
4 | enum MyContext {
  |      ^^^^^^^^^
